infrastructure/envoy-gateway/resources/gateway/public/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: public-proxy
  listeners:
    - name: frigate-webrtc-udp
      protocol: UDP
      port: 8555
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: frigate
    - name: frigate-webrtc-tcp
      protocol: TCP
      port: 8555
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: frigate
    - name: iperf3
      protocol: TCP
      port: 5201
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: iperf3
    - name: git-ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: gitea
    - name: reticulum-data
      protocol: TCP
      port: 4242
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: reticulum
    - name: tailscale-peer-relay
      protocol: UDP
      port: 40000
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: tailscale-peer-relay
    - name: minecraft-server
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: minecraft
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: envoy-gateway-cert
            kind: Secret
          - name: aredn.mcswain.dev-tls
            namespace: cert-manager
            kind: Secret
          - name: dmrhub-tls
            namespace: cert-manager
            kind: Secret
          - name: flux.mcswain.dev-tls
            namespace: cert-manager
            kind: Secret
          - name: jacob.network-tls
            namespace: cert-manager
            kind: Secret
          - name: jacob.pub-tls
            namespace: cert-manager
            kind: Secret
          - name: kubewg.net-tls
            namespace: cert-manager
            kind: Secret
          - name: mcswain.cloud-tls
            namespace: cert-manager
            kind: Secret
          - name: mcswain.dev-tls
            namespace: cert-manager
            kind: Secret
          - name: mcswain.photography-tls
            namespace: cert-manager
            kind: Secret
          - name: mcswain.wiki-tls
            namespace: cert-manager
            kind: Secret
          - name: nvr.mcswain.dev-tls
            namespace: cert-manager
            kind: Secret
          - name: srshost.ing-tls
            namespace: cert-manager
            kind: Secret
          - name: thisspacedoesnotexist.com-tls
            namespace: cert-manager
            kind: Secret
          - name: rmfakecloud-tls
            namespace: rmfakecloud
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: dmrhub-hbrp
      protocol: UDP
      port: 62031
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: dmrhub
    - name: dmrhub-ipsc
      protocol: UDP
      port: 50000
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: dmrhub
    - name: dmrhub-openbridge
      protocol: UDP
      port: 62035
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
              matchLabels:
                  kubernetes.io/metadata.name: dmrhub
